crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ce_amp.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(\"ce_amp.spl\", src)"
---
DocComment "/// Common-emitter audio stage (walkthrough §1)."
Whitespace "\n"
KwBlock "block"
Whitespace " "
Ident "CeAmp"
Whitespace " "
LBrace "{"
Whitespace "\n    "
KwPort "port"
Whitespace " "
Ident "vcc"
Colon ":"
Whitespace " "
Ident "Power"
Lt "<"
Ident "In"
Gt ">"
Semi ";"
Whitespace "\n    "
KwPort "port"
Whitespace " "
Ident "gnd"
Colon ":"
Whitespace " "
Ident "Ground"
Semi ";"
Whitespace "\n    "
KwPort "port"
Whitespace " "
Ident "input"
Colon ":"
Whitespace " "
Ident "Analog"
Lt "<"
Ident "In"
Gt ">"
Semi ";"
Whitespace "\n    "
KwPort "port"
Whitespace " "
Ident "output"
Colon ":"
Whitespace " "
Ident "Analog"
Lt "<"
Ident "Out"
Gt ">"
Semi ";"
Whitespace "\n\n    "
KwNet "net"
Whitespace " "
Ident "base"
Semi ";"
Whitespace "\n    "
KwNet "net"
Whitespace " "
Ident "emitter"
Semi ";"
Whitespace "\n\n    "
DocComment "/// Divider holds the base near 2.1 V."
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "r1"
Whitespace " "
Eq "="
Whitespace " "
Ident "Resistor"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "a"
Colon ":"
Whitespace " "
Ident "vcc"
Comma ","
Whitespace " "
Ident "b"
Colon ":"
Whitespace " "
Ident "base"
Comma ","
Whitespace " "
Ident "value"
Colon ":"
Whitespace " "
Quantity "47k"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "1%"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "r2"
Whitespace " "
Eq "="
Whitespace " "
Ident "Resistor"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "a"
Colon ":"
Whitespace " "
Ident "base"
Comma ","
Whitespace " "
Ident "b"
Colon ":"
Whitespace " "
Ident "gnd"
Comma ","
Whitespace " "
Ident "value"
Colon ":"
Whitespace " "
Quantity "10k"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "1%"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "rc"
Whitespace " "
Eq "="
Whitespace " "
Ident "Resistor"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "a"
Colon ":"
Whitespace " "
Ident "vcc"
Comma ","
Whitespace " "
Ident "b"
Colon ":"
Whitespace " "
Ident "output"
Comma ","
Whitespace " "
Ident "value"
Colon ":"
Whitespace " "
Quantity "4.7k"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "1%"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "re"
Whitespace " "
Eq "="
Whitespace " "
Ident "Resistor"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "a"
Colon ":"
Whitespace " "
Ident "emitter"
Comma ","
Whitespace " "
Ident "b"
Colon ":"
Whitespace " "
Ident "gnd"
Comma ","
Whitespace " "
Ident "value"
Colon ":"
Whitespace " "
Quantity "1k"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "1%"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "c_in"
Whitespace " "
Eq "="
Whitespace " "
Ident "Electrolytic"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "p"
Colon ":"
Whitespace " "
Ident "base"
Comma ","
Whitespace " "
Ident "n"
Colon ":"
Whitespace " "
Ident "input"
Comma ","
Whitespace " "
Ident "value"
Colon ":"
Whitespace " "
Quantity "1uF"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "20%"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n    "
KwLet "let"
Whitespace " "
Ident "q1"
Whitespace " "
Eq "="
Whitespace " "
Ident "Npn"
Whitespace " "
LBrace "{"
Whitespace " "
Ident "c"
Colon ":"
Whitespace " "
Ident "output"
Comma ","
Whitespace " "
Ident "b"
Colon ":"
Whitespace " "
Ident "base"
Comma ","
Whitespace " "
Ident "e"
Colon ":"
Whitespace " "
Ident "emitter"
Comma ","
Whitespace " "
Ident "beta"
Colon ":"
Whitespace " "
Quantity "100"
DotDotEq "..="
Quantity "300"
Whitespace " "
RBrace "}"
Semi ";"
Whitespace "\n"
RBrace "}"
Whitespace "\n\n"
KwContract "contract"
Whitespace " "
Ident "CeAmp"
Whitespace " "
LBrace "{"
Whitespace "\n    "
KwAssume "assume"
Whitespace " "
Ident "temp"
Whitespace " "
KwIn "in"
Whitespace " "
Minus "-"
Quantity "10°C"
DotDotEq "..="
Quantity "60°C"
Semi ";"
Whitespace "\n    "
KwAssume "assume"
Whitespace " "
Ident "vcc"
Dot "."
Ident "v"
Whitespace " "
KwIn "in"
Whitespace " "
Quantity "12V"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "5%"
Semi ";"
Whitespace "\n\n    "
KwLet "let"
Whitespace " "
Ident "h"
Whitespace " "
Eq "="
Whitespace " "
Ident "ac"
LParen "("
Ident "output"
Dot "."
Ident "v"
Whitespace " "
Slash "/"
Whitespace " "
Ident "input"
Dot "."
Ident "v"
RParen ")"
Semi ";"
Whitespace "\n\n    "
DocComment "/// Room for the output to swing ±1 V without clipping."
Whitespace "\n    "
KwSpec "spec"
Whitespace " "
Ident "bias"
Colon ":"
Whitespace " "
Ident "dc"
LParen "("
Ident "output"
Dot "."
Ident "v"
RParen ")"
Whitespace " "
KwIn "in"
Whitespace " "
Quantity "4.5V"
DotDotEq "..="
Quantity "6.5V"
Semi ";"
Whitespace "\n    "
DocComment "/// The next stage expects this level."
Whitespace "\n    "
KwSpec "spec"
Whitespace " "
Ident "gain"
Colon ":"
Whitespace " "
Ident "h"
Dot "."
Ident "at"
LParen "("
Quantity "1kHz"
RParen ")"
Dot "."
Ident "mag"
LParen "("
RParen ")"
Whitespace " "
KwIn "in"
Whitespace " "
Quantity "4.6"
Whitespace " "
PlusMinus "±"
Whitespace " "
Quantity "5%"
Semi ";"
Whitespace "\n    "
DocComment "/// Don't cut the bass."
Whitespace "\n    "
KwSpec "spec"
Whitespace " "
Ident "bass"
Colon ":"
Whitespace " "
Ident "h"
Dot "."
Ident "f_low"
LParen "("
Minus "-"
Quantity "3dB"
RParen ")"
Whitespace " "
Le "<="
Whitespace " "
Quantity "30Hz"
Semi ";"
Whitespace "\n"
RBrace "}"
Whitespace "\n"
Eof ""
