crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__err_cases@infix_suffix.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/err/infix_suffix.spl
---
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4k7%"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "b"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4m7°C"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "c"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4k7in"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "d"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1mhz"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "e"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4k7v"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "f"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4u7h"
Semi ";"
Whitespace "\n"
Eof ""

--- errors ---
E-unit-suffix PrefixNotAllowed 9..10 "k" fix 9..10 "."
E-unit-suffix PrefixNotAllowed 23..24 "m" fix 23..24 "."
E-unit-suffix UnknownSuffix 41..43 "in"
E-unit-suffix UnknownSuffix 54..57 "mhz"
E-unit-suffix UnknownSuffix 70..71 "v" fix 70..71 "V"
E-unit-suffix PrefixNotAllowed 82..83 "u"

--- rendered ---
error[E-unit-suffix]: `%` takes no prefix
  --> infix_suffix.spl:1:10
  |
1 | let a = 4k7%;
  |          ^ `k` can't be a prefix here
  |
  = help: in this form `k` marks the decimal point, but `%` takes no prefix: write `.` instead

error[E-unit-suffix]: `°C` takes no prefix
  --> infix_suffix.spl:2:10
  |
2 | let b = 4m7°C;
  |          ^ `m` can't be a prefix here
  |
  = help: in this form `m` marks the decimal point, but `°C` takes no prefix: write `.` instead

error[E-unit-suffix]: unknown unit `in`
  --> infix_suffix.spl:3:12
  |
3 | let c = 4k7in;
  |            ^^ not a unit or prefix
  |
  = note: units are V A Ω F H Hz s h y W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: unknown unit `mhz`
  --> infix_suffix.spl:4:10
  |
4 | let d = 1mhz;
  |          ^^^ not a unit or prefix
  |
  = help: did you mean `mHz` or `MHz`?
  = note: units are V A Ω F H Hz s h y W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: unknown unit `v`
  --> infix_suffix.spl:5:12
  |
5 | let e = 4k7v;
  |            ^ not a unit or prefix
  |
  = help: did you mean `V`?
  = note: units are V A Ω F H Hz s h y W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: `h` takes no prefix
  --> infix_suffix.spl:6:10
  |
6 | let f = 4u7h;
  |          ^ `u` can't be a prefix here
  |
  = help: in this form `u` marks the decimal point, but `h` takes no prefix: write `.` instead
  = help: or did you mean `uH`?
