crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__err_cases@lookalikes.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/err/lookalikes.spl
---
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "−"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "–"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "—"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "‐"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "‑"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown ";"
Whitespace "\n"
KwSpec "spec"
Whitespace " "
Ident "s"
Colon ":"
Whitespace " "
Ident "x"
Whitespace " "
Unknown "≤"
Whitespace " "
Quantity "1V"
Semi ";"
Whitespace "\n"
KwSpec "spec"
Whitespace " "
Ident "s"
Colon ":"
Whitespace " "
Ident "x"
Whitespace " "
Unknown "≥"
Whitespace " "
Quantity "1V"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "×"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "·"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "∕"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "÷"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "t"
Whitespace " "
Eq "="
Whitespace " "
Quantity "10˚C"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown "\u{a0}"
Plus "+"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown "\u{200b}"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Unknown "＝"
Whitespace " "
Ident "b"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "f"
LParen "("
Ident "b"
Unknown "，"
Whitespace " "
Ident "c"
RParen ")"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Unknown "："
Ident "b"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown "；"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "f"
Unknown "（"
Ident "b"
Unknown "）"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Whitespace " "
Unknown "＋"
Whitespace " "
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown "\u{2009}"
Ident "c"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Ident "b"
Unknown "\u{202f}"
Ident "c"
Semi ";"
Whitespace "\n"
Eof ""

--- errors ---
E-lookalike Lookalike 10..13 "−" fix 10..13 "-"
E-lookalike Lookalike 27..30 "–" fix 27..30 "-"
E-lookalike Lookalike 44..47 "—" fix 44..47 "-"
E-lookalike Lookalike 61..64 "‐" fix 61..64 "-"
E-lookalike Lookalike 78..81 "‑" fix 78..81 "-"
E-lookalike Lookalike 94..96 ";" fix 94..96 ";"
E-lookalike Lookalike 107..110 "≤" fix 107..110 "<="
E-lookalike Lookalike 125..128 "≥" fix 125..128 ">="
E-lookalike Lookalike 143..145 "×" fix 143..145 "*"
E-lookalike Lookalike 159..161 "·" fix 159..161 "*"
E-lookalike Lookalike 175..178 "∕" fix 175..178 "/"
E-lookalike Lookalike 192..194 "÷" fix 192..194 "/"
E-unit-suffix UnknownSuffix 208..211 "˚C" fix 208..211 "°C"
E-lookalike Lookalike 222..224 "\u{a0}" fix 222..224 " "
E-lookalike Lookalike 238..241 "\u{200b}" fix 238..241 ""
E-lookalike Lookalike 249..252 "＝" fix 249..252 "="
E-lookalike Lookalike 267..270 "，" fix 267..270 ","
E-lookalike Lookalike 280..283 "：" fix 280..283 ":"
E-lookalike Lookalike 295..298 "；" fix 295..298 ";"
E-lookalike Lookalike 308..311 "（" fix 308..311 "("
E-lookalike Lookalike 312..315 "）" fix 312..315 ")"
E-lookalike Lookalike 327..330 "＋" fix 327..330 "+"
E-lookalike Lookalike 343..346 "\u{2009}" fix 343..346 " "
E-lookalike Lookalike 358..361 "\u{202f}" fix 358..361 " "

--- rendered ---
error[E-lookalike]: `−` (U+2212 MINUS SIGN) is not ASCII
  --> lookalikes.spl:1:11
  |
1 | let a = b − c;
  |           ^ looks like `-`
  |
  = help: replace it with `-`

error[E-lookalike]: `–` (U+2013 EN DASH) is not ASCII
  --> lookalikes.spl:2:11
  |
2 | let a = b – c;
  |           ^ looks like `-`
  |
  = help: replace it with `-`

error[E-lookalike]: `—` (U+2014 EM DASH) is not ASCII
  --> lookalikes.spl:3:11
  |
3 | let a = b — c;
  |           ^ looks like `-`
  |
  = help: replace it with `-`

error[E-lookalike]: `‐` (U+2010 HYPHEN) is not ASCII
  --> lookalikes.spl:4:11
  |
4 | let a = b ‐ c;
  |           ^ looks like `-`
  |
  = help: replace it with `-`

error[E-lookalike]: `‑` (U+2011 NON-BREAKING HYPHEN) is not ASCII
  --> lookalikes.spl:5:11
  |
5 | let a = b ‑ c;
  |           ^ looks like `-`
  |
  = help: replace it with `-`

error[E-lookalike]: `;` (U+037E GREEK QUESTION MARK) is not ASCII
  --> lookalikes.spl:6:10
  |
6 | let a = b;
  |          ^ looks like `;`
  |
  = help: replace it with `;`

error[E-lookalike]: `≤` (U+2264 LESS-THAN OR EQUAL TO) is not ASCII
  --> lookalikes.spl:7:11
  |
7 | spec s: x ≤ 1V;
  |           ^ looks like `<=`
  |
  = help: replace it with `<=`

error[E-lookalike]: `≥` (U+2265 GREATER-THAN OR EQUAL TO) is not ASCII
  --> lookalikes.spl:8:11
  |
8 | spec s: x ≥ 1V;
  |           ^ looks like `>=`
  |
  = help: replace it with `>=`

error[E-lookalike]: `×` (U+00D7 MULTIPLICATION SIGN) is not ASCII
  --> lookalikes.spl:9:11
  |
9 | let a = b × c;
  |           ^ looks like `*`
  |
  = help: replace it with `*`

error[E-lookalike]: `·` (U+00B7 MIDDLE DOT) is not ASCII
   --> lookalikes.spl:10:11
   |
10 | let a = b · c;
   |           ^ looks like `*`
   |
   = help: replace it with `*`

error[E-lookalike]: `∕` (U+2215 DIVISION SLASH) is not ASCII
   --> lookalikes.spl:11:11
   |
11 | let a = b ∕ c;
   |           ^ looks like `/`
   |
   = help: replace it with `/`

error[E-lookalike]: `÷` (U+00F7 DIVISION SIGN) is not ASCII
   --> lookalikes.spl:12:11
   |
12 | let a = b ÷ c;
   |           ^ looks like `/`
   |
   = help: replace it with `/`

error[E-unit-suffix]: unknown unit `˚C`
   --> lookalikes.spl:13:11
   |
13 | let t = 10˚C;
   |           ^^ not a unit or prefix
   |
   = help: did you mean `°C`?
   = note: units are V A Ω F H Hz s W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-lookalike]: ` ` (U+00A0 NO-BREAK SPACE) is not ASCII
   --> lookalikes.spl:14:10
   |
14 | let a = b + c;
   |          ^ looks like ` `
   |
   = help: replace it with ` `

error[E-lookalike]: `​` (U+200B ZERO WIDTH SPACE) is not ASCII
   --> lookalikes.spl:15:10
   |
15 | let a = b�;
   |          ^ invisible character
   |
   = help: delete it

error[E-lookalike]: `＝` (U+FF1D FULLWIDTH EQUALS SIGN) is not ASCII
   --> lookalikes.spl:16:7
   |
16 | let a ＝ b;
   |       ^^ looks like `=`
   |
   = help: replace it with `=`

error[E-lookalike]: `，` (U+FF0C FULLWIDTH COMMA) is not ASCII
   --> lookalikes.spl:17:12
   |
17 | let a = f(b， c);
   |            ^^ looks like `,`
   |
   = help: replace it with `,`

error[E-lookalike]: `：` (U+FF1A FULLWIDTH COLON) is not ASCII
   --> lookalikes.spl:18:6
   |
18 | let a：b;
   |      ^^ looks like `:`
   |
   = help: replace it with `:`

error[E-lookalike]: `；` (U+FF1B FULLWIDTH SEMICOLON) is not ASCII
   --> lookalikes.spl:19:10
   |
19 | let a = b；
   |          ^^ looks like `;`
   |
   = help: replace it with `;`

error[E-lookalike]: `（` (U+FF08 FULLWIDTH LEFT PARENTHESIS) is not ASCII
   --> lookalikes.spl:20:10
   |
20 | let a = f（b）;
   |          ^^ looks like `(`
   |
   = help: replace it with `(`

error[E-lookalike]: `）` (U+FF09 FULLWIDTH RIGHT PARENTHESIS) is not ASCII
   --> lookalikes.spl:20:12
   |
20 | let a = f（b）;
   |             ^^ looks like `)`
   |
   = help: replace it with `)`

error[E-lookalike]: `＋` (U+FF0B FULLWIDTH PLUS SIGN) is not ASCII
   --> lookalikes.spl:21:11
   |
21 | let a = b ＋ c;
   |           ^^ looks like `+`
   |
   = help: replace it with `+`

error[E-lookalike]: ` ` (U+2009 THIN SPACE) is not ASCII
   --> lookalikes.spl:22:10
   |
22 | let a = b c;
   |          ^ looks like ` `
   |
   = help: replace it with ` `

error[E-lookalike]: ` ` (U+202F NARROW NO-BREAK SPACE) is not ASCII
   --> lookalikes.spl:23:10
   |
23 | let a = b c;
   |          ^ looks like ` `
   |
   = help: replace it with ` `
