crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__err_cases@signs.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/err/signs.spl
---
KwRated "rated"
Whitespace " "
Ident "vcc"
Dot "."
Ident "v"
Whitespace " "
KwWithin "within"
Whitespace " "
Quantity "12V"
Whitespace " "
Plus "+"
Minus "-"
Whitespace " "
Quantity "5%"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "x"
Whitespace " "
Eq "="
Whitespace " "
Minus "-"
Minus "-"
Ident "y"
Semi ";"
Whitespace "\n"
Eof ""

--- errors ---
E-plus-minus PlusMinusTypo 23..25 "+-" fix 23..25 "±"
E-double-minus DoubleMinus 38..40 "--"

--- rendered ---
error[E-plus-minus]: `+-` means `+ (-…)` in Rust
  --> signs.spl:1:24
  |
1 | rated vcc.v within 12V +- 5%;
  |                        ^^ not a tolerance
  |
  = help: for a tolerance write `±` or `+/-`

error[E-double-minus]: `--` means `-(-…)` in Rust
  --> signs.spl:2:9
  |
2 | let x = --y;
  |         ^^ repeated minus signs
  |
  = help: write `x`, or `-(-x)` if that's really meant
