crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__err_cases@unit_suffix.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/err/unit_suffix.spl
---
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Quantity "47q"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "b"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1Meg"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "c"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1k°C"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "d"
Whitespace " "
Eq "="
Whitespace " "
Quantity "5m%"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "e"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4.7k7"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "f"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1KHz"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "g"
Whitespace " "
Eq "="
Whitespace " "
Quantity "10ºC"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "h"
Whitespace " "
Eq "="
Whitespace " "
Quantity "4k7k"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "i"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1e3k7"
Semi ";"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "j"
Whitespace " "
Eq "="
Whitespace " "
Quantity "2kdB"
Semi ";"
Whitespace "\n"
Eof ""

--- errors ---
E-unit-suffix UnknownSuffix 10..11 "q"
E-unit-suffix Meg 22..25 "Meg" fix "M"
E-unit-suffix PrefixNotAllowed 36..37 "k" fix ""
E-unit-suffix PrefixNotAllowed 51..52 "m" fix ""
E-unit-suffix DecimalAndInfix 63..68 "4.7k7"
E-unit-suffix UnknownSuffix 79..82 "KHz" fix "kHz"
E-unit-suffix UnknownSuffix 94..97 "ºC" fix "°C"
E-unit-suffix SecondPrefix 110..111 "k" fix ""
E-unit-suffix DecimalAndInfix 121..126 "1e3k7"
E-unit-suffix PrefixNotAllowed 137..138 "k" fix ""

--- rendered ---
error[E-unit-suffix]: unknown unit `q`
  --> unit_suffix.spl:1:11
  |
1 | let a = 47q;
  |           ^ not a unit or prefix
  |
  = note: units are V A Ω F H Hz s W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: `Meg` is SPICE's spelling of mega
  --> unit_suffix.spl:2:10
  |
2 | let b = 1Meg;
  |          ^^^ write `M` here
  |
  = help: `1Meg` is `1M`; lowercase `m` is milli

error[E-unit-suffix]: `°C` takes no prefix
  --> unit_suffix.spl:3:10
  |
3 | let c = 1k°C;
  |          ^ remove `k`

error[E-unit-suffix]: `%` takes no prefix
  --> unit_suffix.spl:4:10
  |
4 | let d = 5m%;
  |          ^ remove `m`

error[E-unit-suffix]: an infix prefix needs a plain integer before it
  --> unit_suffix.spl:5:9
  |
5 | let e = 4.7k7;
  |         ^^^^^ decimal point or exponent, and an infix prefix
  |
  = help: use one form: `4.7k` or `4k7`

error[E-unit-suffix]: unknown unit `KHz`
  --> unit_suffix.spl:6:10
  |
6 | let f = 1KHz;
  |          ^^^ not a unit or prefix
  |
  = help: did you mean `kHz`?
  = note: units are V A Ω F H Hz s W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: unknown unit `ºC`
  --> unit_suffix.spl:7:11
  |
7 | let g = 10ºC;
  |           ^^ not a unit or prefix
  |
  = help: did you mean `°C`?
  = note: units are V A Ω F H Hz s W K °C % dB, optionally after a prefix f p n u µ m k M G T (case matters)

error[E-unit-suffix]: a number takes one prefix
  --> unit_suffix.spl:8:12
  |
8 | let h = 4k7k;
  |            ^ second prefix `k`
  |
  = help: in `4k7` the `k` is already the prefix (4.7k)

error[E-unit-suffix]: an infix prefix needs a plain integer before it
  --> unit_suffix.spl:9:9
  |
9 | let i = 1e3k7;
  |         ^^^^^ decimal point or exponent, and an infix prefix
  |
  = help: use one form: `4.7k` or `4k7`

error[E-unit-suffix]: `dB` takes no prefix
   --> unit_suffix.spl:10:10
   |
10 | let j = 2kdB;
   |          ^ remove `k`
